--- a/colorgame.css
+++ b/colorgame.css
@@ -1,6 +1,8 @@
 
 body{
     background-color: #232323;
+    margin: 0;
+    font-family: "Montserrat","Avenir";
 }
 .square{
     width: 30%;
@@ -8,16 +10,39 @@ body{
     padding-bottom: 30%;
     float: left;
     margin: 1.66%;
+    border-radius: 25%;
+    transition: background 0.6s;
+    --webkit-transition:background 0.6;
+    -moz-transition: background 0.6s;
+    
 }
 
 #container{
     max-width: 600px ;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 
 h1{
     color: white;
     margin: 0 auto;
+    text-align: center;
+    background-color: steelblue;
+    margin: 0;
+    font-weight: normal;
+    text-transform: uppercase;
+    line-height: 1.1;
+    padding: 20px 0;
+}
+
+#colorDisplay{
+    font-size: 200%;
+}
+
+#messageDisplay{
+    display: inline-block;
+    width: 20%;
+    color: steelblue;
+    transition: all 1.0s;
 }
 
 /*span{
@@ -32,5 +57,25 @@ h1{
 }
 
 .selected{
-    background: blue;
+    color:white;
+    background: steelblue;
+
+}
+button{
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    height: 100%;
+    font-weight: 700;
+    color:steelblue;
+    letter-spacing: 1px;
+    font-size: inherit;
+    transition: all 0.3s;
+    --webkit-transition:background 0.6;
+    -moz-transition: background 0.6s;
+    outline: none;
+}
+button:hover{
+    color:white;
+    background: steelblue;
 }
